--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -11,8 +11,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.2",
-    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
